# movy

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
.github/workflow/: docker.yaml
.github/workflows/: docker.yaml
crates/movy/: Cargo.toml
crates/movy-analysis/: Cargo.toml
crates/movy-analysis/src/: type_graph.rs
crates/movy-fuzz/: Cargo.toml
crates/movy-fuzz/src/: executor.rs  input.rs  meta.rs  solver.rs  state.rs
crates/movy-fuzz/src/mutators/: arg.rs  havoc.rs  object_data.rs  sequence.rs  utils.rs
crates/movy-fuzz/src/mutators/sequence/: append.rs  hooks.rs  remap.rs
crates/movy-fuzz/src/operations/: sui_fuzz.rs  sui_replay.rs
crates/movy-fuzz/src/oracles/sui/: bool_judgement.rs  infinite_loop.rs  overflow.rs  precision_loss.rs  proceeds.rs  type_conversion.rs  typed_bug.rs
crates/movy-replay/: Cargo.toml  build.rs
crates/movy-replay/hello_std/: Move.toml
crates/movy-replay/src/: db.rs  env.rs  event.rs  exec.rs  lib.rs  meta.rs
crates/movy-replay/src/tracer/: concolic.rs  extra.rs  fuzz.rs  mod.rs  op.rs  oracle.rs  state.rs  trace.rs  tree.rs
crates/movy-static-analysis/: Cargo.toml
crates/movy-static-analysis/src/sui/: common.rs  generate_bytecode.rs  type_conversion.rs  unchecked_return.rs
crates/movy-sui/: Cargo.toml
crates/movy-sui-stds/: Cargo.toml  build.rs
crates/movy-sui-stds/movy/: Move.toml
crates/movy-sui-stds/movy/sources/: cheats.move  context.move  log.move  oracle.move
crates/movy-sui-stds/movy/tests/: movy_tests.move
crates/movy-sui-stds/src/: lib.rs
crates/movy-sui/src/: compile.rs  lib.rs
crates/movy-sui/src/cheats/: backend.rs  ctx.rs  mod.rs  scenario.rs
crates/movy-sui/src/database/: cache.rs  file.rs  graphql.rs
crates/movy-sui/src/rpc/: graphql.rs  grpc.rs
crates/movy-types/: Cargo.toml
crates/movy-types/src/: abi.rs  bytecode.rs  input.rs
crates/movy/src/: main.rs
crates/movy/src/analysis/: mod.rs
crates/movy/src/sui/: deploy.rs  env.rs  fuzz.rs  init.rs  mod.rs  replay.rs  static_analysis.rs  trace.rs  utils.rs
move/movy/: Move.toml
move/movy/sources/: cheats.move
test-data/counter/: Move.toml
test-data/counter/tests/: movy.move
test-data/onchain/hello1/: Move.toml  Published.toml  Readme.md
test-data/onchain/hello1/sources/: hello1.move
test-data/onchain/hello1_published_at/: Move.toml  Readme.md
test-data/onchain/hello1_published_at/sources/: hello1_upgrade.move
test-data/onchain/hello1_published_at/tests/: hello1_tests.move
test-data/onchain/hello2/: Move.toml  Published.toml  Readme.md
test-data/onchain/hello2/sources/: hello2.move
test-data/onchain/hello2/tests/: hello2_tests.move
test-data/onchain/hello2_use_upgraded_hello1/: Published.toml  Readme.md
test-data/onchain/hello2_use_upgraded_hello1/sources/: hello2.move
test-data/onchain/hello3/: Move.toml  Published.toml  Readme.md
test-data/onchain/hello3/sources/: hello3.move
test-data/onchain/hello3/tests/: hello3_tests.move
test-data/onchain/hello4/: Move.toml  Readme.md
test-data/onchain/hello4/sources/: hello4.move
test-data/onchain/hello4/tests/: hello4_tests.move
test-data/onchain/hello5/: Move.toml  Published.toml  Readme.md
test-data/onchain/hello5/sources/: hello5.move
test-data/onchain/hello5/tests/: hello5_tests.move
