[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [
    "Ziqiao Kong <mio@lazym.io>"
]
license = "GPL-2.0-only"
homepage = "https://github.com/BitsLabSec/movy"
repository = "https://movy.abort.rs"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
log = "0.4"
env_logger = "0.11"
libafl = "0.15.3"
libafl_bolts = "0.15.3"
clap = { version = "4.5", features = ["derive", "env"]}
toml = "0.9.2"
color-eyre = "0.6"
serde_json = "1.0"
reqwest = "0.12.22"
itertools = "0.14.0"
axum = { version = "0.8.3", features = ["http2", "http1", "json", "macros"] }
jsonrpsee = { version = "0.25.1" }
anyhow = "1.0"
object_store = "0.11" # sui uses this!
byteorder = "1.5.0"
bcs = "0.1"
tokio-stream = "0.1"
mdbx-derive = {version = "0.6.5"}
dotenvy = "0.15.7"
bincode = { version = "2.0", features = ["serde"] }
prometheus = "0.13.3"
auto_impl = "1.3.0"
cynic = { version = "3.10.0", features = ["http-reqwest"] } # sui use these two
scopeguard = "1.2.0"
rand_sui = {version = "0.8.5", package = "rand", features = ["std"] } # Sui uses this =/
rand_libafl = {version = "0.9", package = "rand"}
rand_core_sui = {version = "0.6.4", package = "rand_core"}
rand_core_libafl = {version = "0.9", package = "rand_core"}
const-hex = "1.14.1"
serde_json_any_key = "2.0.0"
pprof = { version = "0.15"}
z3 = "0.16"
z3-sys = "0.9.10"
tempfile = "3"
chrono = "0.4.41"
rand = "0.9.2"
ptree = { version = "0.5.2", default-features = false }
alloy-primitives = "1.4.1"
bitflags = "2.10.0"
petgraph = "0.8"
glob = "0.3.3"
tonic = "0.14"
url = "2.5.7"

# Sui dependencies
move-binary-format = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-trace-format = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-package = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-compiler = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-disassembler = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-ir-types = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-core-types = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-vm-types = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-vm-stack = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-vm-runtime = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz", features = ["tracing", "testing"]}
move-model = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
move-stackless-bytecode = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-move-build = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-json-rpc-types = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-types = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-package-management = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-sdk = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-config = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-storage = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-snapshot = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-core = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
sui-execution = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz", features = ["testing"]}
shared-crypto = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}
# sui-adapter-v2 = {git = "https://github.com/wtdcode/sui", branch = "v1.60.1-fuzz"}

sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "fb62af78b30f5dc64eeaec0094ab95b5ce5b7ce2" }
sui-sdk-types =  { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "fb62af78b30f5dc64eeaec0094ab95b5ce5b7ce2" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "09f86974195ec85d8aae386b1909d341d3ccfe52"} # sui use git dependency =/

# move-stackless-bytecode = {path = "../sui/external-crates/move/crates/move-stackless-bytecode"}
# move-model = {path = "../sui/external-crates/move/crates/move-model"}
# move-binary-format = {path = "../sui/external-crates/move/crates/move-binary-format"}
# move-trace-format = {path = "../sui/external-crates/move/crates/move-trace-format"}
# move-package = {path = "../sui/external-crates/move/crates/move-package"}
# move-compiler = {path = "../sui/external-crates/move/crates/move-compiler"}
# move-disassembler = {path = "../sui/external-crates/move/crates/move-disassembler"}
# move-ir-types = {path = "../sui/external-crates/move/crates/move-ir-types"}
# move-core-types = {path = "../sui/external-crates/move/crates/move-core-types"}
# move-vm-types = {path = "../sui/external-crates/move/crates/move-vm-types"}
# move-vm-stack = {path = "../sui/external-crates/move/crates/move-vm-stack"}
# move-vm-runtime = {path = "../sui/external-crates/move/crates/move-vm-runtime", features = ["tracing", "testing"]}
# sui-move-build = {path = "../sui/crates/sui-move-build"}
# sui-json-rpc-types = {path = "../sui/crates/sui-json-rpc-types"}
# sui-types = {path = "../sui/crates/sui-types"}
# sui-package-management = {path = "../sui/crates/sui-package-management"}
# sui-sdk = {path = "../sui/crates/sui-sdk"}
# sui-config = {path = "../sui/crates/sui-config"}
# sui-storage = {path = "../sui/crates/sui-storage"}
# sui-snapshot = {path = "../sui/crates/sui-snapshot"}
# sui-core = {path = "../sui/crates/sui-core"}
# sui-execution = {path = "../sui/sui-execution", features = ["testing"]}
# # sui-adapter-v2 = {path = "../sui/sui-execution/v2/sui-adapter/"}
# shared-crypto = {path = "../sui/crates/shared-crypto"}


# Aptos dependencies

movy = { version = "0.0.1", default-features = false, path = "crates/movy"}
movy-sui = {version = "0.0.1", default-features = false, path = "crates/movy-sui"}
movy-fuzz = {version = "0.0.1", default-features = false, path = "crates/movy-fuzz"}
movy-types = {version = "0.0.1", default-features = false, path = "crates/movy-types"}
movy-replay = {version = "0.0.1", default-features = false, path = "crates/movy-replay"}
movy-analysis = {version = "0.0.1", default-features = false, path = "crates/movy-analysis"}
movy-static-analysis = {version = "0.0.1", default-features = false, path = "crates/movy-static-analysis"}


[profile.dev.build-override]
opt-level = 3