[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [
    "Ziqiao Kong <mio@lazym.io>"
]
license = "GPL-2.0-only"
homepage = "https://github.com/BitsLabSec/movy"
repository = "https://movy.abort.rs"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
tracing = "0.1"
tracing-subscriber = "0.3.22"
libafl = "0.15.3"
libafl_bolts = "0.15.3"
clap = { version = "4.5", features = ["derive", "env"]}
toml = "0.9.2"
color-eyre = "0.6"
serde_json = "1.0"
reqwest = "0.12.22"
itertools = "0.14.0"
axum = { version = "0.8.3", features = ["http2", "http1", "json", "macros"] }
jsonrpsee = { version = "0.25.1" }
anyhow = "1.0"
object_store = "0.11" # sui uses this!
byteorder = "1.5.0"
bcs = "0.1"
tokio-stream = "0.1"
mdbx-derive = {version = "0.6.5"}
dotenvy = "0.15.7"
bincode = { version = "2.0", features = ["serde"] }
prometheus = "0.13.3"
auto_impl = "1.3.0"
cynic = { version = "3.10.0", features = ["http-reqwest"] } # sui use these two
scopeguard = "1.2.0"
rand_sui = {version = "0.8.5", package = "rand", features = ["std"] } # Sui uses this =/
rand_libafl = {version = "0.9", package = "rand"}
rand_core_sui = {version = "0.6.4", package = "rand_core"}
rand_core_libafl = {version = "0.9", package = "rand_core"}
const-hex = "1.14.1"
serde_json_any_key = "2.0.0"
pprof = { version = "0.15"}
z3 = "0.16"
z3-sys = "0.9.10"
tempfile = "3"
chrono = "0.4.41"
rand = "0.9.2"
ptree = { version = "0.5.2", default-features = false }
alloy-primitives = "1.4.1"
bitflags = "2.10.0"
petgraph = "0.8"
glob = "0.3.3"
tonic = "0.14"
url = "2.5.7"

# Sui dependencies
move-binary-format = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-trace-format = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-package = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-compiler = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-disassembler = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-ir-types = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-core-types = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-vm-types = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-vm-runtime = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz", features = ["tracing", "testing"]}
move-model = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-stackless-bytecode = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-move-build = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-json-rpc-types = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-types = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-package-alt = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
move-package-alt-compilation = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-package-alt = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-package-management = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-sdk = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-config = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-storage = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-snapshot = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-core = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-execution = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz", features = ["testing"]}
shared-crypto = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-move-natives-latest = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}
sui-adapter-latest = {git = "https://github.com/wtdcode/sui", branch = "v1.65.2-fuzz"}


sui-rpc = { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "aef7655b45dcf3747281456f4999542dc52f6af6" }
sui-sdk-types =  { git = "https://github.com/MystenLabs/sui-rust-sdk.git", rev = "aef7655b45dcf3747281456f4999542dc52f6af6" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d2e2d13be3e550745739144e2a090b9675e4ffcb"} # sui use git dependency =/

# move-stackless-bytecode = {path = "../sui/external-crates/move/crates/move-stackless-bytecode"}
# move-model = {path = "../sui/external-crates/move/crates/move-model"}
# move-binary-format = {path = "../sui/external-crates/move/crates/move-binary-format", features = ["wasm"]}
# move-trace-format = {path = "../sui/external-crates/move/crates/move-trace-format"}
# move-package = {path = "../sui/external-crates/move/crates/move-package"}
# move-package-alt = {path = "../sui/external-crates/move/crates/move-package-alt"}
# move-package-alt-compilation = {path = "../sui/external-crates/move/crates/move-package-alt-compilation"}
# move-compiler = {path = "../sui/external-crates/move/crates/move-compiler"}
# move-disassembler = {path = "../sui/external-crates/move/crates/move-disassembler"}
# move-ir-types = {path = "../sui/external-crates/move/crates/move-ir-types"}
# move-core-types = {path = "../sui/external-crates/move/crates/move-core-types"}
# move-vm-types = {path = "../sui/external-crates/move/crates/move-vm-types"}
# move-vm-runtime = {path = "../sui/external-crates/move/crates/move-vm-runtime", features = ["tracing", "testing"]}
# sui-move-build = {path = "../sui/crates/sui-move-build"}
# sui-json-rpc-types = {path = "../sui/crates/sui-json-rpc-types"}
# sui-types = {path = "../sui/crates/sui-types"}
# sui-package-alt = {path = "../sui/crates/sui-package-alt"}
# sui-package-management = {path = "../sui/crates/sui-package-management"}
# sui-sdk = {path = "../sui/crates/sui-sdk"}
# sui-config = {path = "../sui/crates/sui-config"}
# sui-storage = {path = "../sui/crates/sui-storage"}
# sui-snapshot = {path = "../sui/crates/sui-snapshot"}
# sui-core = {path = "../sui/crates/sui-core"}
# sui-execution = {path = "../sui/sui-execution", features = ["testing"]}
# shared-crypto = {path = "../sui/crates/shared-crypto"}
# sui-move-natives-latest = {path = "../sui/sui-execution/latest/sui-move-natives/"}
# sui-adapter-latest = {path = "../sui/sui-execution/latest/sui-adapter/"}

# Aptos dependencies

movy = { version = "0.0.1", default-features = false, path = "crates/movy"}
movy-sui = {version = "0.0.1", default-features = false, path = "crates/movy-sui"}
movy-sui-stds = {version = "0.0.1", default-features = false, path = "crates/movy-sui-stds"}
movy-fuzz = {version = "0.0.1", default-features = false, path = "crates/movy-fuzz"}
movy-types = {version = "0.0.1", default-features = false, path = "crates/movy-types"}
movy-replay = {version = "0.0.1", default-features = false, path = "crates/movy-replay"}
movy-analysis = {version = "0.0.1", default-features = false, path = "crates/movy-analysis"}
movy-static-analysis = {version = "0.0.1", default-features = false, path = "crates/movy-static-analysis"}


[profile.dev.build-override]
opt-level = 3