[package]
name = "movy-fuzz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
movy-types = {workspace = true}
movy-analysis = {workspace = true}
movy-replay = {workspace = true}
movy-sui = {workspace = true}
movy-static-analysis = {workspace = true}

libafl = { workspace = true }
rand_libafl = {workspace = true}
rand_core_libafl = {workspace = true}
rand_sui = {workspace = true}
rand_core_sui = {workspace = true}
libafl_bolts = { workspace = true }
color-eyre = {workspace = true}
serde_json_any_key = {workspace = true}
alloy-primitives = {workspace = true, features = ["serde"]}
tokio = {workspace = true, features = ["full"]}
fastcrypto = {workspace = true}
serde_json.workspace = true
serde.workspace = true
log.workspace = true
z3 = {workspace = true}
z3-sys = {workspace = true}
const-hex = {workspace = true}
itertools = {workspace = true}
anyhow = {workspace = true}
move-binary-format = {workspace = true}
move-core-types = {workspace = true}
move-model = {workspace = true}
move-stackless-bytecode = {workspace = true}
move-trace-format = {workspace = true}
move-vm-stack = {workspace = true}
move-vm-types = {workspace = true}
sui-types = {workspace = true}
sui-json-rpc-types = {workspace = true}
pprof = {workspace = true, optional = true, features = ["flamegraph"] }
