[package]
name = "movy-replay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow = {workspace = true}
auto_impl = {workspace = true}
sui-types = {workspace = true}
tracing.workspace = true
move-trace-format ={workspace = true}
move-binary-format = {workspace = true}
move-core-types = {workspace = true}
move-vm-runtime = {workspace = true, features = ["tracing"]}
move-vm-types = {workspace = true}
color-eyre = {workspace = true}
sui-execution.workspace = true
prometheus.workspace = true
ptree.workspace = true
itertools.workspace = true
reqwest.workspace = true
fastcrypto.workspace = true
cynic = {workspace = true, features = ["http-reqwest"] }
tokio = {workspace = true}
serde.workspace = true
bcs.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde_json_any_key.workspace = true
rand.workspace = true
libafl = {workspace = true}
libafl_bolts = {workspace = true}
alloy-primitives = {workspace = true}
const-hex = {workspace = true}
mdbx-derive = {workspace = true}
z3 = {workspace = true } 
tokio-stream = {workspace = true}
tempfile = {workspace = true}
sui-json-rpc-types = {workspace = true}
sui-move-natives-latest = {workspace = true}
sui-adapter-latest = {workspace = true}

movy-analysis = {workspace = true}
movy-types = {workspace = true}
movy-sui = {workspace = true}
movy-sui-stds = {workspace = true}