[package]
name = "movy-static-analysis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
itertools = { workspace = true }
color-eyre = { workspace = true }
anyhow = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-model = { workspace = true }
move-stackless-bytecode = { workspace = true }
movy-replay = { workspace = true }
movy-types = { workspace = true }
sui-types = { workspace = true }
serde_json = { workspace = true }
