[package]
name = "movy-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
thiserror = {workspace = true}
color-eyre = {workspace = true}
serde_json = {workspace = true}
toml = {workspace = true}
bcs = {workspace = true}
reqwest = {workspace = true}
anyhow = {workspace = true}
object_store = {workspace = true}
mdbx-derive = {workspace = true}
fastcrypto = {workspace = true}
libafl = {workspace = true}
tokio = {workspace = true}
move-binary-format = {workspace = true}
move-core-types = {workspace = true}
alloy-primitives = {workspace = true, features = ["serde"]}
serde = {workspace = true}
itertools = {workspace = true}
tracing.workspace = true
glob = {workspace = true}
const-hex = {workspace = true}
tonic = {workspace = true}
bitflags = {workspace = true, features = ["serde"]}
sui-types = {workspace = true}
sui-sdk = {workspace = true}