[package]
name = "movy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["env", "derive"] }
tokio = {workspace = true, features = ["full"]}
dotenvy = {workspace = true}
tracing.workspace = true
tracing-subscriber = {workspace = true, features = ["env-filter"]}
color-eyre = {workspace = true}
sui-types = {workspace = true}
glob = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
itertools = {workspace = true}
bcs = {workspace = true}

movy-fuzz = {workspace = true}
movy-sui = {workspace = true}
movy-types = {workspace = true}
movy-replay = {workspace = true}
movy-analysis = {workspace = true}
movy-static-analysis = {workspace = true}
